added support for mtgstocks

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+content/projects/mtg-stats/conn_info_pi.ini
+.gitignore
+content/projects/mtg-stats/conn_info_windows.ini
+content/projects/mtg-stats/setup_windows_db.ps1
