--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log
 *.vsix
 *.pyc
 *.wav
+credentials*
 
 .idea/
 lib/
@@ -27,3 +28,4 @@ content/projects/mtg-stats/conn_info_pi.ini
 content/projects/mtg-stats/conn_info_windows.ini
 content/projects/mtg-stats/setup_windows_db.ps1
 content/projects/mtg-stats/test.py
+experimental/
